# Liqz

./: Cargo.toml  Justfile  README.md  tsconfig.json
cli/: Cargo.toml
cli/src/: lib.rs
programs/liqz/: Cargo.toml
programs/liqz/src/: lib.rs  nft_bid.rs  nft_deposit.rs  nft_pool.rs  utils.rs
scripts/: transact.js
tests/: taker.spec.ts
